--- a/examples/general_eval_implementation.ipynb
+++ b/examples/general_eval_implementation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
     "from karma.eval_datasets.indicvoices_r_dataset import IndicVoicesRDataset\n",
     "from karma.metrics.common_metrics import WERMetric, CERMetric\n",
     "from karma.benchmark import Benchmark\n",
-    "from karma.metrics.asr_wer_preprocessor import ASRTextProcessor\n",
+    "from karma.metrics.asr_wer_processor import ASRTextProcessor\n",
     "from karma.cache.cache_manager import CacheManager\n",
     "\n",
     "\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,55 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching 403 files: 100%|██████████| 403/403 [00:00<00:00, 7968.21it/s]\n"
+     "ename": "TypeError",
+     "evalue": "Benchmark.evaluate() got an unexpected keyword argument 'metric_configs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mbenchmark\u001b[49m\u001b[43m.\u001b[49m\u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmetric_configs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmertric_configs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: Benchmark.evaluate() got an unexpected keyword argument 'metric_configs'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'overall_score': {'wer': 0.022222222222222223, 'cer': 0.005025125628140704},\n",
-       " 'predictions': [{'prediction': 'इसके अलावा कई सारी ऐसी पत्रिकाएँ भी समाचार पत्र के साथ आती हैं',\n",
-       "   'expected_output': 'इसके अलावा कई सारी ऐसे पत्रिकाएँ भी समाचार पत्र के साथ आती हैं',\n",
-       "   'sample': {'expected_output': 'इसके अलावा कई सारी ऐसे पत्रिकाएँ भी समाचार पत्र के साथ आती हैं',\n",
-       "    'audio': array([-2.9122859e-04, -9.7828422e-05, -2.2524942e-04, ...,\n",
-       "           -1.3460522e-04, -9.2088187e-05,  0.0000000e+00],\n",
-       "          shape=(80881,), dtype=float32),\n",
-       "    'other_args': {'language': 'hi'}},\n",
-       "   'from_cache': False,\n",
-       "   'success': True},\n",
-       "  {'prediction': 'क्योंकि मेरे घर में कुछ लोग को चाय पसंद है और कुछ लोग को कॉफी पीना पसंद है',\n",
-       "   'expected_output': 'क्योंकि मेरे घर में कुछ लोग को चाय पसंद है और कुछ लोग को कॉफी पीना पसंद है',\n",
-       "   'sample': {'expected_output': 'क्योंकि मेरे घर में कुछ लोग को चाय पसंद है और कुछ लोग को कॉफी पीना पसंद है',\n",
-       "    'audio': array([-1.6141692e-04,  9.6207863e-05, -1.4705223e-04, ...,\n",
-       "            0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
-       "          shape=(82432,), dtype=float32),\n",
-       "    'other_args': {'language': 'hi'}},\n",
-       "   'from_cache': False,\n",
-       "   'success': True},\n",
-       "  {'prediction': 'क्योंकि वह ऐसा बात बोलते हैं जो हम नॉर्मल लोग नहीं समझ पाते हैं',\n",
-       "   'expected_output': 'क्योंकि वह ऐसा बात बोलते हैं जो हम नॉर्मल लोग नहीं समझ पाते हैं',\n",
-       "   'sample': {'expected_output': 'क्योंकि वह ऐसा बात बोलते हैं जो हम नॉर्मल लोग नहीं समझ पाते हैं',\n",
-       "    'audio': array([-3.9951876e-05,  5.8670342e-04, -1.8704496e-04, ...,\n",
-       "           -5.3739366e-03, -2.0727185e-03,  0.0000000e+00],\n",
-       "          shape=(90113,), dtype=float32),\n",
-       "    'other_args': {'language': 'hi'}},\n",
-       "   'from_cache': False,\n",
-       "   'success': True}],\n",
-       " 'summary': {'overall_score': {'wer': 0.022222222222222223,\n",
-       "   'cer': 0.005025125628140704},\n",
-       "  'evaluation_time': 44.66871500015259}}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
