Add healthbench rubric

--- a/examples/general_eval_implementation.ipynb
+++ b/examples/general_eval_implementation.ipynb
@@ -31,7 +31,7 @@
     "from karma.eval_datasets.indicvoices_r_dataset import IndicVoicesRDataset\n",
     "from karma.metrics.common_metrics import WERMetric, CERMetric\n",
     "from karma.benchmark import Benchmark\n",
-    "from karma.metrics.asr_wer_processor import ASRTextProcessor\n",
+    "from karma.metrics.asr.asr import ASRTextProcessor\n",
     "from karma.cache.cache_manager import CacheManager\n",
     "\n",
     "\n",
@@ -70,10 +70,10 @@
      "evalue": "Benchmark.evaluate() got an unexpected keyword argument 'metric_configs'",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mbenchmark\u001b[49m\u001b[43m.\u001b[49m\u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmetric_configs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmertric_configs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: Benchmark.evaluate() got an unexpected keyword argument 'metric_configs'"
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mbenchmark\u001B[49m\u001B[43m.\u001B[49m\u001B[43mevaluate\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmetric_configs\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmertric_configs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mTypeError\u001B[39m: Benchmark.evaluate() got an unexpected keyword argument 'metric_configs'"
      ]
     }
    ],
