--- a/docs_v2/src/content/docs/index.mdx
+++ b/docs_v2/src/content/docs/index.mdx
@@ -15,7 +15,7 @@ hero:
       icon: external
       variant: minimal
     - text: LLMs.txt
-      link: /user-guide/llm/
+      link: https://karma.eka.care/llms-full.txt
       icon: external
       variant: minimal
 ---
