--- a/docs_v2/src/content/docs/index.mdx
+++ b/docs_v2/src/content/docs/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: KARMA-OpenMedEvalKit
 description: Knowledge Assessment and Reasoning for Medical Applications - A comprehensive evaluation framework for medical AI models.
-template: splash
+tableOfContents: true
 hero:
   tagline: Comprehensive LLM evaluation framework for medical AI models and datasets.
   image:
@@ -12,10 +12,6 @@ hero:
       icon: right-arrow
     - text: View on GitHub
       link: https://github.com/eka-care/KARMA-OpenMedEvalKit
-      icon: external
-      variant: minimal
-    - text: LLMs.txt
-      link: https://karma.eka.care/llms-full.txt
       icon: external
       variant: minimal
 ---
@@ -29,15 +25,24 @@ KARMA is designed for researchers, developers, and healthcare organizations who 
 <CardGrid>
 	<Card title="Fast & Efficient" icon="rocket">
 		Process thousands of medical examples efficiently with intelligent caching and batch processing.
+
+        [See caching →](/caching)
 	</Card>
 	<Card title="Multi-Modal Ready" icon="document">
 		Support for text, images, and audio evaluation across multiple datasets.
+
+
+        [See available datasets →](/user-guide/datasets/datasets_overview)
 	</Card>
 	<Card title="Model Agnostic" icon="setting">
 		Works with any model - Qwen, MedGemma, Bedrock-SDK, OpenAI-SDK or your custom architecture with unified interface.
+
+        [See available models →](/user-guide/models/built-in-models/)
 	</Card>
 	<Card title="Extensible" icon="approve-check">
-		Bring your own model, dataset or even metric. Integrated with Huggingface artifacts and supports local evaluation.
+		Bring your own model, dataset or even metric. Integrated with Huggingface and also supports local evaluation.
+
+        [Add your own →](/user-guide/add-your-own/add-model/)
 	</Card>
 </CardGrid>
 
@@ -47,8 +52,7 @@ Get started with KARMA in minutes:
 
 ```bash
 # Install KARMA
-git clone https://github.com/eka-care/KARMA-OpenMedEvalKit.git
-cd KARMA-OpenMedEvalKit && uv sync
+pip install karma-medeval
 
 # Run your first evaluation
 karma eval --model "Qwen/Qwen3-0.6B" --datasets openlifescienceai/pubmedqa --max-samples 3
@@ -95,7 +99,7 @@ Results saved to: results.json
 	<Card title="Basic Usage" icon="pencil">
 		Learn the CLI commands and start evaluating your first model.
 
-		[Learn CLI →](/user-guide/basic-usage/)
+		[Learn CLI →](/user-guide/cli-basics/)
 	</Card>
 	<Card title="Add Your Own" icon="setting">
 		Extend KARMA with custom models, datasets, and evaluation metrics.
