--- a/docs_v2/src/content/docs/user-guide/add-your-own/add-dataset.mdx
+++ b/docs_v2/src/content/docs/user-guide/add-your-own/add-dataset.mdx
@@ -87,10 +87,10 @@ The `DataLoaderIterable` format ensures that all datasets work seamlessly with a
 
 ## Using Local Datasets with KARMA
 This guide will walk you through how to plug that dataset into KARMA’s evaluation pipeline.
+Let's say we are trying to integrate an MCQA dataset.
 
 <Steps>
-
-1. "Organize Your Dataset"
+1. Organize Your Dataset
     Ensure your dataset is structured correctly.  
     Each row should ideally include:
     - A question
@@ -98,7 +98,7 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
     - The correct answer
     - Optionally: metadata like category, generic name, or citation
 
-2. "Set Up a Custom Dataset Class"
+2. Set Up a Custom Dataset Class
     KARMA supports registering your own datasets using a decorator.
 
     ```python
@@ -114,11 +114,11 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
 
     This decorator registers your dataset with KARMA for evaluations.
 
-3. "Load your Dataset"
+3. Load your Dataset
     In your Dataset class, load your dataset file.  
     You can use any format supported by pandas, such as CSV or Parquet.
 
-    ```
+    ```python
     def __init__(self, ...):
         self.data_path = <path_to_your_dataset>
         if not os.path.exists(self.data_path):
@@ -127,10 +127,10 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
         ...
     ```
 
-4. "Implement the format_item Method"
+4. Implement the format_item Method
     Each row in your dataset will be converted into an input-output pair for the model.
 
-    ```
+    ```python
     def format_item(self, sample: Dict[str, Any]) -> DataLoaderIterable:
         input_text = self._format_question(sample["data"])
         correct_answer = sample["data"]["ground_truth"]
@@ -141,10 +141,10 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
         dataloader_item.conversation = None
         return dataloader_item
     ```
-5. "Iterate Over the Dataset"
+5. Iterate Over the Dataset
     Implement `__iter__()` to yield formatted examples.
 
-    ```
+    ```python
     def __iter__(self) -> Generator[Dict[str, Any], None, None]:
         if self.dataset is None:
             self.dataset = list(self.load_eval_dataset())
@@ -154,9 +154,10 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
             item = self.format_item(sample)
             yield item
     ```
-6. "Handle Model Output"
+6. Handle Model Output
     Extract the model's predictions.
-    ```
+
+    ```python
     def extract_prediction(self, response: str) -> Tuple[str, bool]:
         answer, success = "", False
         if "Final Answer:" in response:
@@ -166,8 +167,9 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
             success = True
         return answer, success
     ```
-7. "Yield Examples for Evaluation"
+7. Yield Examples for Evaluation
     Read from your DataFrame and return structured examples.
+
     ```python
     def load_eval_dataset(self, ...):
         for _, row in self.df.iterrows():
@@ -191,5 +193,3 @@ This guide will walk you through how to plug that dataset into KARMA’s evaluat
     }
     ```
 </Steps>
-
-If your dataset already includes previous model outputs, this is where you can plug them in.
