Add lato as the default font

--- a/docs_v2/src/content/docs/index.mdx
+++ b/docs_v2/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: KARMA-OpenMedEvalKit
 description: Knowledge Assessment and Reasoning for Medical Applications - A comprehensive evaluation framework for medical AI models.
 tableOfContents: false
 hero:
-  tagline: Comprehensive LLM evaluation framework for medical AI models and datasets.
+  tagline: Knowledge Assessment and Reasoning for Medical Applications - A comprehensive evaluation framework for medical AI models.
   image:
     file: ../../assets/houston.webp
   actions:
