--- a/examples/general_eval_implementation.ipynb
+++ b/examples/general_eval_implementation.ipynb
@@ -6,8 +6,12 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "import sys\n",
-    "import os"
+    "from karma.models.indic_conformer import IndicConformerASR, INDIC_CONFORMER_MULTILINGUAL_META\n",
+    "from karma.eval_datasets.indicvoices_r_dataset import IndicVoicesRDataset\n",
+    "from karma.metrics.common_metrics import WERMetric, CERMetric\n",
+    "from karma.benchmark import Benchmark\n",
+    "from karma.processors.multilingual_text_processor import MultilingualTextProcessor\n",
+    "from karma.cache.cache_manager import CacheManager"
    ]
   },
   {
@@ -16,14 +20,6 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from karma.models.indic_conformer import IndicConformerASR, INDIC_CONFORMER_MULTILINGUAL_META\n",
-    "from karma.eval_datasets.indicvoices_r_dataset import IndicVoicesRDataset\n",
-    "from karma.metrics.common_metrics import WERMetric, CERMetric\n",
-    "from karma.benchmark import Benchmark\n",
-    "from karma.processors.multilingual_text_processor import MultilingualTextProcessor\n",
-    "from karma.cache.cache_manager import CacheManager\n",
-    "\n",
-    "\n",
     "model = IndicConformerASR(model_name_or_path=\"ai4bharat/indic-conformer-600m-multilingual\")\n",
     "processor = MultilingualTextProcessor()\n",
     "dataset = IndicVoicesRDataset(language=\"Hindi\", postprocessors=[processor])\n",
