--- a/docs_v2/src/content/docs/index.mdx
+++ b/docs_v2/src/content/docs/index.mdx
@@ -136,7 +136,7 @@ $ karma eval --model "Qwen/Qwen3-0.6B" --datasets openlifescienceai/pubmedqa --m
 
 ## Release resources
 <LinkCard
-  title="KARMA relase blog"
+  title="KARMA release blog"
   href="http://info.eka.care/services/introducing-karma-openmedevalkit-an-open-source-framework-for-medical-ai-evaluation"
   description="Read about KARMA"
 />
@@ -145,7 +145,6 @@ $ karma eval --model "Qwen/Qwen3-0.6B" --datasets openlifescienceai/pubmedqa --m
   href=" http://info.eka.care/services/advancing-healthcare-ai-evaluation-in-india-ekacare-releases-four-evaluation-datasets"
   description="Read about the datasets released along with KARMA"
 />
-
 <LinkCard
   title="Beyond WER - SemWER"
   href="http://info.eka.care/services/beyond-traditional-wer-the-critical-need-for-semantic-wer-in-asr-for-indian-healthcare"
