Fix docs and notebook for metrics

--- a/examples/general_eval_implementation.ipynb
+++ b/examples/general_eval_implementation.ipynb
@@ -1,10 +1,13 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-30T05:51:39.094073Z",
+     "start_time": "2025-07-30T05:51:38.981859Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from karma.models.indic_conformer import IndicConformerASR, INDIC_CONFORMER_MULTILINGUAL_META\n",
     "from karma.eval_datasets.indicvoices_r_dataset import IndicVoicesRDataset\n",
@@ -12,43 +15,93 @@
     "from karma.benchmark import Benchmark\n",
     "from karma.processors.multilingual_text_processor import MultilingualTextProcessor\n",
     "from karma.cache.cache_manager import CacheManager"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-30T05:52:29.856616Z",
+     "start_time": "2025-07-30T05:52:23.374176Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "model = IndicConformerASR(model_name_or_path=\"ai4bharat/indic-conformer-600m-multilingual\")\n",
     "processor = MultilingualTextProcessor()\n",
     "dataset = IndicVoicesRDataset(language=\"Hindi\", postprocessors=[processor])\n",
-    "mertric_configs = [\n",
-    "    {\n",
-    "        \"metric\": WERMetric(metric_name=\"wer\"),\n",
-    "        \"processors\": []\n",
-    "    },\n",
-    "    {\n",
-    "        \"metric\": CERMetric(metric_name=\"cer\"),\n",
-    "        \"processors\": []\n",
-    "    }\n",
+    "metrics = [\n",
+    "    WERMetric(metric_name=\"wer\"),\n",
+    "    CERMetric(metric_name=\"cer\"),\n",
     "]\n",
     "cache_manager = CacheManager(model_config=INDIC_CONFORMER_MULTILINGUAL_META, dataset_name=dataset.dataset_name)"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Resolving data files:   0%|          | 0/246 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e7b5f2b7f5d14d2cb9fa550566582942"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Resolving data files:   0%|          | 0/99 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2ba4af7deeaf4f94aab84bdaca3c2a41"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Connected to DuckDB at cache.db\n",
+      "✅ DuckDB persistent storage connected\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-30T05:52:29.880426Z",
+     "start_time": "2025-07-30T05:52:29.875262Z"
+    }
+   },
    "cell_type": "code",
+   "source": "benchmark = Benchmark(model=model, dataset=dataset, cache_manager=cache_manager)",
    "outputs": [],
-   "execution_count": null,
-   "source": "benchmark = Benchmark(model=model, dataset=dataset, cache_manager=cache_manager)"
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-07-30T05:52:29.957439Z"
+    }
+   },
    "cell_type": "code",
+   "source": "benchmark.evaluate(metrics=metrics, batch_size=1)",
    "outputs": [],
-   "execution_count": null,
-   "source": "benchmark.evaluate(metric_configs=mertric_configs, batch_size=1)"
+   "execution_count": null
   },
   {
    "metadata": {},
